Fix CSS overlap issue

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -494,7 +494,8 @@ html {
     }
     .aside-toggled .wrapper>footer,
     .aside-toggled .wrapper>section {
-        margin-left: 220px
+        margin-left: 220px;
+        z-index: 16;
     }
     .aside-toggled .wrapper>.aside {
         margin-left: 0
